fix(docker): ensure data persistence across container updates
- Update Dockerfile to set BUILDER to /build
- Update Dockerfile to set WORKDIR to /app
- Update docker-compose.yml to use a named volume for iphistory service
- Mount iphistory_data volume to /app directory in the container
- Ensure data is preserved when pulling the latest image and recreating the container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,8 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - data:/app
+      - iphistory_data:/app
 
 volumes:
-  data:
-    driver: local
+  iphistory_data:
+    external: false
