--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   iphistory:
     image: ghcr.io/skidoodle/iphistory:main
@@ -8,8 +6,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - iphistory_data:/app
+      - data:/app
 
 volumes:
-  iphistory_data:
-    external: false
+  data:
