--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,6 +16,10 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: "1.25.4"
+          cache: true
+
+      - name: Generate
+        run: go generate ./...
 
       - name: Build
-        run: go build -v ./...
+        run: go build -v .
